risolvendo issues di CLI